pom java 21 ojp-adapter-service migrated to OJP v2